@@ -19,6 +19,10 @@
 import re
 import rfc822
 import codecs
+import inspect
+from cgi import parse_header
+from cStringIO import StringIO
+from tempfile import TemporaryFile
 from urllib2 import parse_http_list as _parse_list_header
 from datetime import datetime
 try:
@@ -30,13 +34,14 @@ try:
     frozenset = frozenset
 except NameError:
     from sets import Set as set, ImmutableSet as frozenset
-from werkzeug._internal import _UpdateDict, HTTP_STATUS_CODES
+from werkzeug._internal import _UpdateDict, _decode_unicode, HTTP_STATUS_CODES
 
 
 _accept_re = re.compile(r'([^\s;,]+)(?:[^,]*?;\s*q=(\d*(?:\.\d+)?))?')
 _token_chars = frozenset("!#$%&'*+-.0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                          '^_`abcdefghijklmnopqrstuvwxyz|~')
 _etag_re = re.compile(r'([Ww]/)?(?:"(.*?)"|(.*?))(?:\s*,\s*|$)')
+_multipart_boundary_re = re.compile('^[ -~]{0,200}[!-~]$')
 
 _entity_headers = frozenset([
     'allow', 'content-encoding', 'content-language', 'content-length',
@@ -1010,6 +1015,169 @@ def parse_date(value):
             return datetime.utcfromtimestamp(rfc822.mktime_tz(t))
 
 
+def _make_stream_factory(factory):
+    """this exists for backwards compatibility!, will go away in 0.6."""
+    args, _, _, defaults = inspect.getargspec(factory)
+    required_args = len(args) - len(defaults or ())
+    if inspect.ismethod(factory):
+        required_args -= 1
+    if required_args != 0:
+        return factory
+    from warnings import warn
+    warn(DeprecationWarning('stream factory passed to `parse_form_data` '
+                            'uses deprecated invokation API.'), stacklevel=4)
+    return lambda *a: factory()
+
+
+def default_stream_factory(total_content_length, filename, content_type,
+                           content_length=None):
+    """The stream factory that is used per default."""
+    if total_content_length > 1024 * 500:
+        return TemporaryFile('wb+')
+    return StringIO()
+
+
+def fix_ie_filename(filename):
+    """Internet Explorer 6 transmits the full file name if a file is
+    uploaded.  This function strips the full path if it thinks the
+    filename is Windows-like absolute.
+    """
+    if filename[1:3] == ':\\' or filename[:2] == '\\\\':
+        return filename.split('\\')[-1]
+    return filename
+
+
+def parse_multipart(file, boundary, content_length, stream_factory=None,
+                    charset='utf-8', errors='ignore', buffer_size=64 * 1024):
+    """Parse a multipart/form-data stream.  This is invoked by
+    `utils.parse_form_data` if the content type matches.  Currently it
+    exists for internal usage only, but could be exposed as separate
+    function if it turns out to be useful and if we consider the API stable.
+    """
+    # XXX: get rid of size argument when calling readline()
+    # XXX: add support for limiting the input data
+
+    # make sure the buffer size is divisible by four so that we can base64
+    # decode chunk by chunk
+    assert buffer_size % 4 == 0, 'buffer size has to be divisible by 4'
+
+    if stream_factory is None:
+        stream_factory = default_stream_factory
+    else:
+        stream_factory = _make_stream_factory(stream_factory)
+
+    if not is_valid_multipart_boundary(boundary):
+        raise ValueError('Invalid boundary: %s' % boundary)
+    if len(boundary) > buffer_size:
+        raise ValueError('Boundary longer than buffer size')
+
+    total_content_length = content_length
+    next_part = '--' + boundary
+    last_part = next_part + '--'
+
+    form = []
+    files = []
+
+    file = _MultiPartStream(file, content_length)
+
+    try:
+        terminator = file.readline(buffer_size)
+        if terminator.strip() != next_part:
+            raise ValueError('Expected boundary at start of multipart data')
+
+        while terminator != last_part:
+            headers = parse_multipart_headers(file, buffer_size)
+            disposition = headers.get('content-disposition')
+            if disposition is None:
+                raise ValueError('Missing Content-Disposition header')
+            disposition, extra = parse_header(disposition)
+            filename = extra.get('filename')
+            name = extra.get('name')
+            transfer_encoding = headers.get('content-transfer-encoding')
+
+            # regular form data, not a file
+            if filename is None:
+                stream = StringIO()
+
+            # a file upload
+            else:
+                content_type = headers.get('content-type')
+                if content_type is None:
+                    content_type = 'application/octet-stream'
+                    extra = {}
+                else:
+                    content_type, extra = parse_header(content_type)
+                try:
+                    content_length = int(headers['content-length'])
+                except (KeyError, ValueError):
+                    content_length = 0
+                stream = stream_factory(total_content_length, content_type,
+                                        filename, content_length)
+
+            while 1:
+                line = file.readline(buffer_size)
+                if not line:
+                    raise ValueError('unexpected end of part')
+                if line[:2] == '--':
+                    terminator = line.strip()
+                    if terminator in (next_part, last_part):
+                        break
+                if transfer_encoding == 'base64':
+                    try:
+                        line = line.decode('base64')
+                    except:
+                        raise ValueError('could not base 64 decode chunk')
+                stream.write(line)
+
+            # chop of the trailing line terminator and rewind
+            stream.seek(-2, 1)
+            stream.truncate()
+            stream.seek(0)
+
+            if filename is not None:
+                files.append((name, FileStorage(stream, fix_ie_filename(
+                    _decode_unicode(filename, charset, errors)), name,
+                    content_type, content_length)))
+            else:
+                form.append((name, _decode_unicode(stream.read(),
+                                                   charset, errors)))
+    finally:
+        # make sure the stream was fully consumed, WSGI demands that.
+        file.exhaust()
+
+    return MultiDict(form), MultiDict(files)
+
+
+def parse_multipart_headers(file, buffer_size=64 * 1024):
+    """This function parses multipart headers from a file.  It does not
+    implement a full MIME parser but should be sufficient for what
+    modern web browsers send.
+
+    .. warning::
+       Do not pass the WSGI input stream to this function.  The wsgi
+       input stream is not EOF limited and there is no guarantee that
+       `readline` supports the optional size hint.
+
+    :param file: a :class:`file`-like object that supports
+                 :meth:`~file.readline` with size hint.
+    :param buffer_size: size of the buffer.
+    """
+    result = []
+
+    while 1:
+        line = file.readline(buffer_size)
+        if line[-2:] != '\r\n':
+            raise ValueError('unexpected end of line in multipart header')
+        line = line[:-2]
+        if not line:
+            break
+        parts = line.split(':', 1)
+        if len(parts) == 2:
+            result.append((parts[0].strip(), parts[1].strip()))
+
+    return Headers(result)
+
+
 def is_resource_modified(environ, etag=None, data=None, last_modified=None):
     """Convenience method for conditional requests.
 
@@ -1084,3 +1252,19 @@ def is_hop_by_hop_header(header):
     :return: `True` if it's an entity header, `False` otherwise.
     """
     return header.lower() in _hop_by_pop_headers
+
+
+def is_valid_multipart_boundary(boundary):
+    """Checks if the string given is a valid multipart boundary."""
+    return boundary and _multipart_boundary_re.match(boundary) is not None
+
+
+# circular dependency fun
+from werkzeug.utils import LimitedStream, MultiDict, FileStorage, Headers
+
+
+class _MultiPartStream(LimitedStream):
+    """Raises `ValueError` when exhausted."""
+
+    def on_exhausted(self):
+        raise ValueError('tried to read past boundary')
